[UPD] atualizações proposta por irineujunior

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php" : ">=5.3.0",
-        "itbz/fpdf": "^1.7"
+        "itbz/fpdf": "^1.*",
+        "nesbot/carbon" : "1.*"
     },
     "autoload": {
         "psr-4": {
