--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "require": {
         "php" : ">=5.3.0",
+        "ext-intl": "*",
         "itbz/fpdf": "^1.7"
     },
     "autoload": {
