--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require": {
         "php" : ">=5.3.0",
         "ext-intl": "*",
-        "itbz/fpdf": "^1.7"
+        "itbz/fpdf": "^1.7",
+        "nesbot/carbon": "~1.20"
     },
     "autoload": {
         "psr-4": {
