--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,14 @@
         }
     ],
     "require": {
-        "php" : ">=5.3.0",
+        "php" : ">=5.6.0",
         "ext-intl": "*",
         "itbz/fpdf": "^1.7",
-        "nesbot/carbon": "~1.20"
+        "nesbot/carbon": "~1.20",
+        "illuminate/support": "~5.2.0|~5.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5.0"
     },
     "autoload": {
         "psr-4": {
