--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ext-intl": "*",
         "itbz/fpdf": "^1.7",
         "nesbot/carbon": "~1.20",
-        "illuminate/support": "~5.2.0|~5.3.0"
+        "illuminate/support": ">=5.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0"
