--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,10 @@
 filter:
     excluded_paths: [tests/*, exemplos/*]
 
+build:
+    environment:
+        php: 5.6
+
 checks:
     php:
         remove_extra_empty_lines: true
