--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ before_script:
   - "composer install --verbose"
 
 script:
-  - "vendor/bin/phpunit -c phpunit.xml"
+  - "vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover"
+after_script:
+  - "wget https://scrutinizer-ci.com/ocular.phar"
+  - "php ocular.phar code-coverage:upload --format=php-clover coverage.clover"
