--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,11 @@
     "autoload": {
         "psr-4": {
             "Eduardokum\\LaravelBoleto\\": "src"
+        },
+        "autoload-dev": {
+            "psr-0": {
+                "Eduardokum\\LaravelBoleto\\Tests\\": "tests"
+            }
         }
     }
 }
