--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
-        "orchestra/testbench": "2.1.*"
+        "orchestra/testbench": "3.2"
     },
     "autoload": {
         "psr-4": {
