--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ before_script:
 
 script:
   - "vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover"
+
 after_script:
   - "wget https://scrutinizer-ci.com/ocular.phar"
   - "php ocular.phar code-coverage:upload --format=php-clover coverage.clover"
+
+after_success:
+  - if  [ $TRAVIS_PHP_VERSION = '5.6' ] && [ $TRAVIS_BRANCH = 'master' ]; then sh generate-api.sh; fi
