--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "php" : ">=5.5.0",
         "ext-intl": "*",
         "itbz/fpdf": "^1.7",
-        "nesbot/carbon": "~1.20",
-        "illuminate/support": ">=5.1.0"
+        "nesbot/carbon": "1.*",
+        "illuminate/support": "5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
