--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "ext-intl": "*",
         "itbz/fpdf": "^1.7",
         "nesbot/carbon": "1.*",
-        "illuminate/support": "5.*"
+        "illuminate/contracts": "~5.1",
+        "illuminate/support": "~5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
