--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "itbz/fpdf": "^1.7",
         "nesbot/carbon": "1.*",
         "illuminate/contracts": "~5.1",
-        "illuminate/support": "~5.1"
+        "illuminate/support": "~5.1",
+        "neitanod/forceutf8": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
