--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,9 +2,16 @@ filter:
     excluded_paths: [tests/*, exemplos/*, manuais/*]
 
 build:
-    environment:
-        php: 5.6
-
+    nodes:
+        php56:
+            environment:
+                php: 5.6
+        php70:
+            environment:
+                php: 7.0
+        php71:
+            environment:
+                php: 7.1
 checks:
     php:
         remove_extra_empty_lines: true
