--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ language: php
 php:
   - 5.6
   - 7.0
+  - 7.1
 
 before_script:
   - "composer self-update"
   - "composer --version"
-  - "composer install --verbose"
+  - "composer install --verbose --ignore-platform-reqs"
 
 script:
   - "vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover"
