--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "nesbot/carbon": "1.*",
         "illuminate/contracts": "~5.1",
         "illuminate/support": "~5.1",
+        "illuminate/view": "~5.1",
+        "illuminate/events": "~5.1",
         "neitanod/forceutf8": "^2.0"
     },
     "require-dev": {
