--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         "php" : ">=5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "itbz/fpdf": "^1.7",
         "nesbot/carbon": "1.*",
         "illuminate/contracts": "~5.1",
         "illuminate/support": "~5.1",
         "illuminate/view": "~5.1",
         "illuminate/events": "~5.1",
-        "neitanod/forceutf8": "^2.0"
+        "neitanod/forceutf8": "^2.0",
+        "setasign/fpdf": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
