--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php" : ">=5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "nesbot/carbon": "2.*",
+        "nesbot/carbon": "*",
         "illuminate/contracts": "~5.1",
         "illuminate/support": "~5.1",
         "illuminate/view": "~5.1",
