--- a/composer.json
+++ b/composer.json
@@ -14,20 +14,20 @@
         }
     ],
     "require": {
-        "php" : ">=5.5.0",
+        "php": ">=5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
         "nesbot/carbon": "1.*",
-        "illuminate/contracts": "~5.1",
-        "illuminate/support": "~5.1",
-        "illuminate/view": "~5.1",
-        "illuminate/events": "~5.1",
+        "illuminate/contracts": "~5.1.0",
+        "illuminate/support": "~5.1.0",
+        "illuminate/view": "~5.1.0",
+        "illuminate/events": "~5.1.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0.0",
-        "orchestra/testbench": "3.2"
+        "orchestra/testbench": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
