--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,14 @@
         "php": ">=5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "nesbot/carbon": "^1.0||^2.0",
-        "illuminate/contracts": "^5.1.0",
-        "illuminate/support": "^5.1.0",
-        "illuminate/view": "^5.1.0",
-        "illuminate/events": "^5.1.0",
+        "nesbot/carbon": ">=1.0,<3.0",
+        "laravel/framework": "^5.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0.0",
-        "orchestra/testbench": "^3.0.0"
+        "phpunit/phpunit": "^7.0.0",
+        "orchestra/testbench": "^3.8"
     },
     "autoload": {
         "psr-4": {
