--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0.0",
+        "phpunit/phpunit": "^6.0.0||^7.0.0",
         "orchestra/testbench": "^3.8"
     },
     "autoload": {
