--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0.0||^7.0.0",
-        "orchestra/testbench": "^3.8"
+        "phpunit/phpunit": "^6.0||^7.0",
+        "orchestra/testbench": "^3.1"
     },
     "autoload": {
         "psr-4": {
@@ -34,6 +34,11 @@
     "autoload-dev": {
         "psr-4": {
             "Eduardokum\\LaravelBoleto\\Tests\\": "tests"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.2.0"
         }
     }
 }
