--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.5.0,<8.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "nesbot/carbon": ">=1.0,<3.0",
-        "laravel/framework": "^5.0||^6.0",
+        "laravel/framework": "^6.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0||^7.0",
+        "phpunit/phpunit": ">=6.0,<9.0",
         "orchestra/testbench": "^3.1"
     },
     "autoload": {
