--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "r2soft/laravel-boleto",
+    "name": "Eduardokum/laravel-boleto",
     "description": "Biblioteca com boletos para o laravel",
     "keywords": [
         "r2soft",
@@ -22,13 +22,18 @@
         "php": ">=7.1.3",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "laravel/framework": "^5.0||^6.0||^7.0",
+        "laravel/framework": "^7.0",
+        "neitanod/forceutf8": "^2.0",
+        "nesbot/carbon": "2.*",
+        "illuminate/support": "^8.0",
+        "illuminate/view": "~5.1",
+        "illuminate/events": "~5.1",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=6.0,<9.0",
-        "orchestra/testbench": "^3.1"
+        "phpunit/phpunit": "~9.0",
+        "orchestra/testbench": "^5.3"
     },
     "autoload": {
         "psr-4": {
