--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,16 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": ">5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "laravel/framework": "^7.0",
-        "neitanod/forceutf8": "^2.0",
-        "nesbot/carbon": "2.*",
-        "illuminate/support": "^8.0",
-        "illuminate/view": "~5.1",
-        "illuminate/events": "~5.1",
+        "laravel/framework": "^5.0||^6.0||^7.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "^5.3"
+        "phpunit/phpunit": ">=6.0,<9.0",
+        "orchestra/testbench": "^3.1"
     },
     "autoload": {
         "psr-4": {
