--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Eduardokum/laravel-boleto",
+    "name": "R2soft/laravel-boleto",
     "description": "Biblioteca com boletos para o laravel",
     "keywords": [
         "r2soft",
