--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "setasign/fpdf": "^1.8"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=6.0||^8.0||>=9.0",
+        "phpunit/phpunit": ">=6.0||^8.0||^9.0",
         "orchestra/testbench": "^3.1"
     },
     "autoload": {
