Remove laravel/framework dependency, making it 'framework agnostic'

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,13 @@
         "php": ">5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "laravel/framework": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/support": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/container": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/events": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/filesystem": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/view": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/contracts": "^5.0||^6.0||^7.0|^8.0",
+        "illuminate/http": "^5.0||^6.0||^7.0|^8.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8"
     },
