--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,12 @@
         }
     ],
     "require": {
-        "php": ">5.5.0",
+         "php": ">5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
         "laravel/framework": "^5.0||^6.0||^7.0|^8.0",
         "neitanod/forceutf8": "^2.0",
-        "setasign/fpdf": "^1.8",
-        "nesbot/carbon": "^2.50"
+        "setasign/fpdf": "^1.8"
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0||^8.0||^9.0",
