--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf":      "^1.8",
         "ext-curl":           "*",
-        "ext-json":           "*"
+        "ext-json":           "*",
+        "ext-openssl":        "*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0||^8.0||^9.0",
