--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,93 +1,80 @@
-name: "Build"
+name: build
 
 on:
-  - push
-  - pull_request
-
-env:
-  COMPOSER_MEMORY_LIMIT: -1
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "*"
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     strategy:
       fail-fast: false
       matrix:
-        php: [8.0, 7.4, 7.3, 7.2]
-        laravel: [9.*, 8.*, 7.*, 6.*]
-        dependency-version: [prefer-lowest, prefer-stable]
-        os: [ubuntu-latest]
-        include:
-          - laravel: 9.*
-            testbench: 7.*
-          - laravel: 8.*
-            testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
-          - laravel: 6.*
-            testbench: 4.*
-        exclude:
-          - laravel: 8.*
-            php: 7.2
-          - laravel: 9.*
-            php: 7.2
-          - laravel: 9.*
-            php: 7.3
-          - laravel: 9.*
-            php: 7.4
-
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
-
-    env:
-      extensions: exif, json, mbstring, dom
-
+          php: [ 8.0, 7.4, 7.3, 7.2 ]
+          laravel: [ 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
+          dependency-version: [ prefer-lowest, prefer-stable ]
+          os: [ ubuntu-latest ]
+          include:
+              -   laravel: 9.*
+              -   laravel: 8.*
+              -   laravel: 7.*
+              -   laravel: 6.*
+          exclude:
+              -   laravel: 8.*
+                  php: 7.2
+              -   laravel: 9.*
+                  php: 7.2
+              -   laravel: 9.*
+                  php: 7.3
+              -   laravel: 9.*
+                  php: 7.4
+    runs-on: ${{ matrix.os }}-latest
+    name: LRV ${{ matrix.laravel }} (${{ matrix.os }})
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cache dependencies
-        uses: actions/cache@v1
-        with:
-          path: ~/.composer/cache/files
-          key: dependencies-laravel-${{ matrix.laravel }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
-
-      - name: Setup PHP extensions
-        id: cache-env
-        uses: shivammathur/cache-extensions@v1
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: ${{ env.extensions }}
-          key: php-extensions-cache-v1
-
-      - name: Setup PHP ${{ matrix.php }}
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: ${{ env.extensions }}
-          coverage: none
+          extensions: intl, mbstring, mcrypt, openssl
+          tools: composer
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup problem matchers
+        run: |
+          echo "::add-matcher::${{ runner.tool_cache }}/php.json"
+          echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+
+      # Necessário para usar a versão correta de teste do laravel
+      - name: Setup Laravel
+        run: |
+          composer require "orchestra/testbench=*" --no-update --no-suggest --ignore-platform-reqs --dev
+          composer require "laravel/framework=${{ matrix.laravel }}" --no-update --no-suggest --ignore-platform-reqs
+
+      - name: Get composer cache directory
+        id: composercache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composercache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+        run: composer install --no-suggest --ignore-platform-reqs
 
-      - name: Execute tests
-        run: vendor/bin/phpunit
+      - name: Run tests
+        run: "vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.clover"
 
-
-      # Remove todos arquivos antigos e adiciona os novos
-      - name: Publish
-        working-directory: gh-pages
-        run: |
-          rm -rf *
-          cp -r ../tmp-doc/. ./
-          git config user.name github-actions
-          git config user.email github-action@users.noreply.github.com
-          git add .
-          git commit -m "Documentacao atualizada"
-            git push
-          continue-on-error: true
       # Tenta enviar a cobertura de código até 5 vezes
       - name: Upload coverage
         run: |
@@ -101,30 +88,43 @@ jobs:
 
   update-docs:
     # Atualizar a documentação apenas a partir do ramo master
-    needs: [ test ]
+    needs: [test]
     if: "!contains(github.event.head_commit.message, 'skip ci') && github.ref == 'refs/heads/master'"
     runs-on: ubuntu-latest
     name: Update Docs
     steps:
-      -   name: Checkout source
-          uses: actions/checkout@v2
-          with:
-            path: source
+      - name: Checkout source
+        uses: actions/checkout@v2
+        with:
+          path: source
 
-      -   name: Checkout gh-pages
-          uses: actions/checkout@v2
-          with:
-            ref: gh-pages
-            path: gh-pages
+      - name: Checkout gh-pages
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: gh-pages
 
-      -   name: Setup PHP
-          uses: shivammathur/setup-php@v2
-          with:
-            php-version: 7.1
-            extensions: intl, mbstring, mcrypt, openssl
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 7.1
+          extensions: intl, mbstring, mcrypt, openssl
 
-      -   name: Generate docs
-          run: |
-            wget http://www.apigen.org/apigen.phar
-            php apigen.phar generate -s source/src -d tmp-doc --title 'Documentação laravel-boletos' --template-theme bootstrap
-          continue-on-error: true
+      - name: Generate docs
+        run: |
+          wget http://www.apigen.org/apigen.phar
+          php apigen.phar generate -s source/src -d tmp-doc --title 'Documentação laravel-boletos' --template-theme bootstrap
+        continue-on-error: true
+
+      # Remove todos arquivos antigos e adiciona os novos
+      - name: Publish
+        working-directory: gh-pages
+        run: |
+          rm -rf *
+          cp -r ../tmp-doc/. ./
+          git config user.name github-actions
+          git config user.email github-action@users.noreply.github.com
+          git add .
+          git commit -m "Documentacao atualizada"
+          git push
+        continue-on-error: true
