--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
                   php: 7.3
               -   laravel: 9.*
                   php: 7.4
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
     name: LRV ${{ matrix.laravel }} (${{ matrix.os }})
     steps:
       - name: Checkout
