--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
               -   laravel: 9.*
                   php: 7.4
     runs-on: ${{ matrix.os }}
-    name: LRV ${{ matrix.laravel }} (${{ matrix.os }})
+    name: PHP ${{ matrix.php }} LRV ${{ matrix.laravel }} (${{ matrix.os }})
     steps:
       - name: Checkout
         uses: actions/checkout@v2
