--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0||^8.0||^9.0",
-        "orchestra/testbench": "^3.1||^7.0"
+        "orchestra/testbench": "*"
     },
     "autoload": {
         "psr-4": {
