composer allow plugins

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,10 @@
         "psr-4": {
             "Eduardokum\\LaravelBoleto\\Tests\\": "tests"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
