--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [ 8.0, 7.4, 7.3, 7.2 ]
-                laravel: [ 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
+                php: [ 8.2, 8.1, 8.0, 7.4, 7.3, 7.2 ]
+                laravel: [ 10.*, 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
                 dependency-version: [ prefer-stable ]
                 os: [ ubuntu-latest ]
                 include:
@@ -34,18 +34,32 @@ jobs:
                 exclude:
                     -   laravel: 5.5.*
                         php: 8
+                    -   laravel: 5.5.*
+                        php: 8.1
+                    -   laravel: 5.5.*
+                        php: 8.2
                     -   laravel: 5.8.*
                         php: 8
                     -   laravel: 5.8.*
-                        php: 8
+                        php: 8.1
+                    -   laravel: 5.8.*
+                        php: 8.2
                     -   laravel: 6.*
                         php: 7.2
                     -   laravel: 6.*
                         php: 8
+                    -   laravel: 6.*
+                        php: 8.1
+                    -   laravel: 6.*
+                        php: 8.2
                     -   laravel: 7.*
                         php: 7.2
                     -   laravel: 7.*
                         php: 8
+                    -   laravel: 7.*
+                        php: 8.1
+                    -   laravel: 7.*
+                        php: 8.2
                     -   laravel: 8.*
                         php: 7.2
                     -   laravel: 8.*
@@ -58,6 +72,16 @@ jobs:
                         php: 7.3
                     -   laravel: 9.*
                         php: 7.4
+                    -   laravel: 10.*
+                        php: 7.2
+                    -   laravel: 10.*
+                        php: 7.3
+                    -   laravel: 10.*
+                        php: 7.4
+                    -   laravel: 10.*
+                        php: 8.0
+                    -   laravel: 10.*
+                        php: 8.1
         runs-on: ${{ matrix.os }}
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
         env:
