--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php":                ">5.5.0",
         "ext-intl":           "*",
         "ext-mbstring":       "*",
-        "laravel/framework":  "^5.0||^6.0||^7.0||^8.0||^9.0||^10.0",
+        "laravel/framework":  "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf":      "^1.8",
         "ext-curl":           "*",
@@ -25,8 +25,8 @@
         "ext-openssl":        "*"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=6.0||^8.0||^9.0||^10.0",
-        "orchestra/testbench": "*"
+        "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^3.0|^4.0|^5.0|^6.0|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
