--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
         "orchestra/testbench": "^3.0|^4.0|^5.0|^6.0|^7.0|^8.0",
-        "friendsofphp/php-cs-fixer": "^3.17"
+        "friendsofphp/php-cs-fixer": "*"
     },
     "autoload": {
         "psr-4": {
