--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "ext-curl":           "*",
         "ext-json":           "*",
         "ext-openssl":        "*",
-        "chillerlan/php-qrcode": "^4.3"
+        "chillerlan/php-qrcode": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
