--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-openssl": "*",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "eduardokum/laravel-mail-auto-embed": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
