--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
             fail-fast: false
             matrix:
                 php: [ 8.2, 8.1, 8.0, 7.4, 7.3, 7.2 ]
-                laravel: [ 10.*, 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
+                laravel: [ 10.*, 9.*, 8.*, 7.*, 6.*]
                 dependency-version: [ prefer-stable ]
                 os: [ ubuntu-latest ]
                 include:
