--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">5.5.0",
         "ext-intl": "*",
         "ext-mbstring": "*",
-        "laravel/framework": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
+        "laravel/framework": "^6.0|^7.0|^8.0|^9.0|^10.0",
         "neitanod/forceutf8": "^2.0",
         "setasign/fpdf": "^1.8",
         "ext-curl": "*",
@@ -27,8 +27,8 @@
         "eduardokum/laravel-mail-auto-embed": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "orchestra/testbench": "^3.0|^4.0|^5.0|^6.0|^7.0|^8.0",
+        "phpunit/phpunit": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0|^8.0",
         "friendsofphp/php-cs-fixer": "*"
     },
     "autoload": {
