--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-openssl": "*",
-        "simplesoftwareio/simple-qrcode": "^4.2",
-        "eduardokum/laravel-mail-auto-embed": "dev-master"
+        "eduardokum/laravel-mail-auto-embed": "dev-master",
+        "chillerlan/php-qrcode": "^1.0|^2.0|^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0|^7.0|^8.0|^9.0|^10.0",
