--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "eduardokum/laravel-mail-auto-embed": "dev-master",
-        "chillerlan/php-qrcode": "^1.0|^2.0|^3.0|^4.0|^5.0"
+        "chillerlan/php-qrcode": "^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0|^7.0|^8.0|^9.0|^10.0",
