--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,13 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [ 8.2, 8.1, 8.0, 7.4, 7.3, 7.2 ]
-                laravel: [ 10.*, 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
+                php: [ 8.2, 8.1, 8.0, 7.4 ]
+                laravel: [ 11.*, 10.*, 9.*, 8.*, 7.*, 6.*, 5.8.*, 5.5.* ]
                 dependency-version: [ prefer-stable ]
                 os: [ ubuntu-latest ]
                 include:
+                    -   laravel: 11.*
+                        testbench: 9.*
                     -   laravel: 10.*
                         testbench: 8.*
                     -   laravel: 9.*
@@ -47,15 +49,11 @@ jobs:
                     -   laravel: 5.8.*
                         php: 8.2
                     -   laravel: 6.*
-                        php: 7.2
-                    -   laravel: 6.*
                         php: 8
                     -   laravel: 6.*
                         php: 8.1
                     -   laravel: 6.*
                         php: 8.2
-                    -   laravel: 7.*
-                        php: 7.2
                     -   laravel: 7.*
                         php: 8
                     -   laravel: 7.*
@@ -63,26 +61,18 @@ jobs:
                     -   laravel: 7.*
                         php: 8.2
                     -   laravel: 8.*
-                        php: 7.2
-                    -   laravel: 8.*
-                        php: 7.3
-                    -   laravel: 8.*
                         php: 7.4
                     -   laravel: 9.*
-                        php: 7.2
-                    -   laravel: 9.*
-                        php: 7.3
-                    -   laravel: 9.*
                         php: 7.4
-                    -   laravel: 10.*
-                        php: 7.2
-                    -   laravel: 10.*
-                        php: 7.3
                     -   laravel: 10.*
                         php: 7.4
                     -   laravel: 10.*
                         php: 8.0
-                    -   laravel: 10.*
+                    -   laravel: 11.*
+                        php: 7.4
+                    -   laravel: 11.*
+                        php: 8.0
+                    -   laravel: 11.*
                         php: 8.1
         runs-on: ${{ matrix.os }}
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
